--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.2",
     "element-plus": "^2.6.3",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.4.21",
@@ -36,6 +38,7 @@
     "sass-loader": "^14.1.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-mock": "^3.0.2",
     "vue-tsc": "^2.0.11"
   }
 }
