--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "element-plus": "^2.6.3",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.4.21",
